height set to auto to ignore the overlapping issue with container class and attribution class

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 .container {
   width: 90%;
-  height: 70vh;
+  height: auto;
   display: grid;
   margin-top: 2rem;
   gap: 1.5rem;
@@ -139,7 +139,7 @@ body {
 
   .container {
     width: 80%;
-    height: 70vh;
+    /* height: 70%; */
     display: grid;
     margin-top: 2rem;
     gap: 1.5rem;
@@ -155,6 +155,8 @@ body {
     /* background-color: hsl(210, 46%, 95%); */
     /* background-color: hsl(0, 0%, 81%); */
     background-color: hsl(210, 46%, 95%);
+    line-height: 1.15;
+    overflow: auto;
 
 
   }
